<resources>
    <string name="app_name">Train Schedule</string>
    <string name="results">Search Results</string>
    <string name="user_input">Input Search Parameters</string>
    <string name="history">History</string>
    <string name="favourites">Favourites</string>
    <string name="stations_from">Departing\nStation</string>
    <string name="stations_to">Destination\nStation</string>
    <string name="time_desc">Trains Departing Within</string>
    <string name="to">To</string>
    <string name="schedule">Get Filtered Schedule</string>
    <string name="full_schedule">Get Full Schedule</string>
    <string name="next_train">Get Next Train</string>
    <string name="add_to_fav_txt">Add To Favourites</string>
    <string name="share">Share</string>
    <string name="clear_his_txt">Clear History</string>
    <string name="list_from_txt">From:</string>
    <string name="list_to_txt">To:</string>
    <string name="to_txt">To</string>
    <string name="clear_fav_txt">Clear Favourites</string>
    <string name="rename_fav_txt">Rename</string>
    <string name="delete_fav_txt">Delete</string>
    <string name="add_filter_txt">Include time filter</string>
    <string name="results_table_head_dept">Departure</string>
    <string name="results_table_head_arr">Arrival</string>
    <string name="results_table_head_dur">Duration</string>
    <string name="results_table_head_freq">Frequency</string>
    <string name="dummy">############</string>
    <string name="more">more&#8230;</string>
    <string name="results_view_details_dialog_back_btn">Back</string>
    <string-array name="stations_array">
        <item>Abanpola</item>
        <item>Ahangama</item>
        <item>Ahungalle</item>
        <item>Akbopura</item>
        <item>Akurala</item>
        <item>Alawatupitiya</item>
        <item>Alawwa</item>
        <item>Aluthgama</item>
        <item>Ambalangoda</item>
        <item>Ambewela</item>
        <item>Ambeypussa</item>
        <item>Anawilundawa</item>
        <item>Andadola</item>
        <item>Angampitiya</item>
        <item>Angulana</item>
        <item>Anuradhapura</item>
        <item>Anuradhapura Town</item>
        <item>Arachchikattuwa</item>
        <item>Arukkuwatte</item>
        <item>Aselapura</item>
        <item>Aukana</item>
        <item>Avisawella</item>
        <item>Badulla</item>
        <item>Balana</item>
        <item>Balapitiya</item>
        <item>Bambalapitiya</item>
        <item>Bandarawela</item>
        <item>Baseline Road</item>
        <item>Battaluoya</item>
        <item>Batticaloa</item>
        <item>Batuwatte</item>
        <item>Bemmulla</item>
        <item>Bentota</item>
        <item>Beruwala</item>
        <item>Bolawatte</item>
        <item>Boossa</item>
        <item>Borelessa</item>
        <item>Botale</item>
        <item>Bulugahagoda</item>
        <item>Buthgamuwa</item>
        <item>Chilaw</item>
        <item>China Bey</item>
        <item>Colombo Fort</item>
        <item>Colombo Yard</item>
        <item>Cotta Road</item>
        <item>Daraluwa</item>
        <item>Dehiwala</item>
        <item>Dematagoda</item>
        <item>Demodara</item>
        <item>Dewapuram</item>
        <item>Diyatalawa</item>
        <item>Dodanduwa</item>
        <item>Egoda Uyana</item>
        <item>Elle</item>
        <item>Enderamulla</item>
        <item>Erattaperiyakulam</item>
        <item>Eravur</item>
        <item>Erukkalam Pendu</item>
        <item>Free Trade Zone</item>
        <item>Galaboda</item>
        <item>Galgamuwa</item>
        <item>Galle</item>
        <item>Gallella</item>
        <item>Galoya Junction</item>
        <item>Gammana</item>
        <item>Gampaha</item>
        <item>Gampola</item>
        <item>Ganegoda</item>
        <item>Ganemulla</item>
        <item>Ganewatte</item>
        <item>Gangoda</item>
        <item>Gantalawa</item>
        <item>Gelioya</item>
        <item>Ginthota</item>
        <item>Girambe</item>
        <item>Godagama</item>
        <item>Great Western</item>
        <item>Habaraduwa</item>
        <item>Habarana</item>
        <item>Haliela</item>
        <item>Haputale</item>
        <item>Hatamuna</item>
        <item>Hataras Kotuwa</item>
        <item>Hatton</item>
        <item>Heel Oya</item>
        <item>Heendeniya</item>
        <item>Hettimulla</item>
        <item>Hikkaduwa</item>
        <item>Hingurakgoda</item>
        <item>Hiriyala</item>
        <item>Homagama</item>
        <item>Homagama Hospital</item>
        <item>Horape</item>
        <item>Horiwiala</item>
        <item>Hunupitiya</item>
        <item>Idalgasinna</item>
        <item>Ihalagama</item>
        <item>Ihalakotte</item>
        <item>Ihalawatawala</item>
        <item>Induruwa</item>
        <item>Inguruoya</item>
        <item>Ja-Ela</item>
        <item>Jayanthipura</item>
        <item>Kadadasi Nagar</item>
        <item>Kadigamuwa</item>
        <item>Kadugannawa</item>
        <item>Kadugoda</item>
        <item>Kahawa</item>
        <item>Kakkapalliya</item>
        <item>Kalawewa</item>
        <item>Kalkudah</item>
        <item>Kalutara North</item>
        <item>Kalutara South</item>
        <item>Kamburugamuwa</item>
        <item>Kandana</item>
        <item>Kandegoda</item>
        <item>Kandy</item>
        <item>Kantale</item>
        <item>Kapuwatte</item>
        <item>Karadipuwal</item>
        <item>Kathaluwa</item>
        <item>Kattuwa</item>
        <item>Katugastota</item>
        <item>Katugoda</item>
        <item>Katukurunda</item>
        <item>Katunayaka Airport</item>
        <item>Katunayake</item>
        <item>Keenawala</item>
        <item>Kekirawa</item>
        <item>Kelaniya</item>
        <item>Kinigama</item>
        <item>Kirulapone</item>
        <item>Kital Elle</item>
        <item>Kochchikade</item>
        <item>Koggala</item>
        <item>Kollupitiya</item>
        <item>Kolonnawa</item>
        <item>Kompannavediya</item>
        <item>Konwewa</item>
        <item>Koralawella</item>
        <item>Kosgama</item>
        <item>Kosgoda</item>
        <item>Koshinna</item>
        <item>Kotagala</item>
        <item>Kottawa</item>
        <item>Kuda Wawa</item>
        <item>Kudahakapola</item>
        <item>Kumarakanda</item>
        <item>Kumbalgama</item>
        <item>Kurana</item>
        <item>Kurunegala</item>
        <item>Laksauyana</item>
        <item>Liyanagemulla</item>
        <item>Lunawa</item>
        <item>Lunuwaila</item>
        <item>Madampagama</item>
        <item>Madampe</item>
        <item>Madurankuliya</item>
        <item>Magelegoda</item>
        <item>Maggona</item>
        <item>Mahaiyawa</item>
        <item>Maharagama</item>
        <item>Maho</item>
        <item>Malapalle</item>
        <item>Manampitiya</item>
        <item>Mangalaeliya</item>
        <item>Maradana</item>
        <item>Matale</item>
        <item>Matara</item>
        <item>Medagama</item>
        <item>Medawachchiya</item>
        <item>Meegoda</item>
        <item>Mha Induruwa</item>
        <item>Midigama</item>
        <item>Mihintale</item>
        <item>Mihintale Junction</item>
        <item>Minneriya</item>
        <item>Mirigama</item>
        <item>Mirissa</item>
        <item>Mollipatana</item>
        <item>Moragollagama</item>
        <item>Morakele</item>
        <item>Moratuwa</item>
        <item>Mount Laviniya</item>
        <item>Mundal</item>
        <item>Muththettugala</item>
        <item>Nagollagama</item>
        <item>Nailiya</item>
        <item>Nanuoya</item>
        <item>Narahenpita</item>
        <item>Nattandiya</item>
        <item>Nawalapitiya</item>
        <item>Nawinna</item>
        <item>Negama</item>
        <item>Negombo</item>
        <item>Nelumpokuna</item>
        <item>Nooranagar</item>
        <item>Nugegoda</item>
        <item>Ohiya</item>
        <item>Omanthai</item>
        <item>Padukka</item>
        <item>Palavi</item>
        <item>Pallewala</item>
        <item>Palugaswewa</item>
        <item>Panadura</item>
        <item>Panagoda</item>
        <item>Panaleeya</item>
        <item>Pannipitiya</item>
        <item>Parakumpura</item>
        <item>Parasangahawewa</item>
        <item>Patagamgoda</item>
        <item>Pathanpha</item>
        <item>Pattipola</item>
        <item>Payagala North</item>
        <item>Payagala South</item>
        <item>Peradeniya</item>
        <item>Perakumpura</item>
        <item>Peralanda</item>
        <item>Periyanagavillu</item>
        <item>Piliduwa</item>
        <item>Pilimatalawa</item>
        <item>Pinnawala</item>
        <item>Pinwatte</item>
        <item>Piyadigama</item>
        <item>Piyagama</item>
        <item>Polonnaruwa</item>
        <item>Polgahawela</item>
        <item>Polwathumodara</item>
        <item>Poonewa</item>
        <item>Potuhera</item>
        <item>Pulachchikulam</item>
        <item>Punani</item>
        <item>Puttalam</item>
        <item>Puwakpitiya</item>
        <item>Radella</item>
        <item>Ragama</item>
        <item>Rambukkana</item>
        <item>Ranamuggamuwa</item>
        <item>Randenigama</item>
        <item>Rathgama</item>
        <item>Ratmalana</item>
        <item>Richmond Hill</item>
        <item>Rosella</item>
        <item>Saliyapura</item>
        <item>Sarasaviuyana</item>
        <item>Sawarana</item>
        <item>Secretariat Halt</item>
        <item>Seeduwa</item>
        <item>Seenigama</item>
        <item>Senarathgama</item>
        <item>Sevanapitiya</item>
        <item>Siyalangamuwa</item>
        <item>Srawasthipura</item>
        <item>Talawa</item>
        <item>Talawakele</item>
        <item>Talawattegedara</item>
        <item>Tampalapopla</item>
        <item>Telwatte</item>
        <item>Tembligala</item>
        <item>Thalpe</item>
        <item>Thambuttegama</item>
        <item>Thandikulam</item>
        <item>Thilladiya</item>
        <item>Thiranagama</item>
        <item>Timbiriyagedara</item>
        <item>Tismalpola</item>
        <item>Train Halt 01</item>
        <item>Trincomalle</item>
        <item>Tudella</item>
        <item>Tummodara</item>
        <item>Udatalawinna</item>
        <item>Udaththawala</item>
        <item>Udhamulla</item>
        <item>Uduwara</item>
        <item>Uggalla</item>
        <item>Ukuwela</item>
        <item>Ulapone</item>
        <item>Unawatuna</item>
        <item>Valachchenei</item>
        <item>Vandaramullai</item>
        <item>Vavuniya</item>
        <item>Veyangoda</item>
        <item>Wadduwa</item>
        <item>Waga</item>
        <item>Waikkala</item>
        <item>Walahapitiya</item>
        <item>Walgama</item>
        <item>Walpola</item>
        <item>Wanawasala</item>
        <item>Wandurawa</item>
        <item>Watagoda</item>
        <item>Watareka</item>
        <item>Watawala</item>
        <item>Wattegama</item>
        <item>Weligama</item>
        <item>Welikanda</item>
        <item>Wellawa</item>
        <item>Wellawatta</item>
        <item>Wijayarajadahana</item>
        <item>Wilwatte</item>
        <item>Wlakubura</item>
        <item>Yagoda</item>
        <item>Yapahuwa</item>
        <item>Yatagama</item>
        <item>Yattalgoda</item>
    </string-array>
</resources>