<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" > 
	<LinearLayout
		android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical" >
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/stations_from" />
    	<AutoCompleteTextView
    	    android:id="@+id/stations_from"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="5dp"
        	android:completionThreshold="1" />
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/stations_to" />
    	<AutoCompleteTextView
    	    android:id="@+id/stations_to"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="5dp"
        	android:completionThreshold="1" />
    	<Button
			android:id="@+id/get_all"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/full_schedule" 
			android:focusable="true"/>

		<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/time_desc" />
		<TableLayout
		    android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:stretchColumns="*">
   			<TableRow>
   			    <Spinner
       				android:id="@+id/times_from"
       				android:layout_width="fill_parent"
       				android:layout_height="wrap_content" />
				<TextView
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:gravity="center_horizontal"
        			android:text="@string/to" />
   				<Spinner
       				android:id="@+id/times_to"
       				android:layout_width="fill_parent"
       				android:layout_height="wrap_content" />
   			</TableRow>
		</TableLayout>
    	<Button
       		android:id="@+id/get_given"
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
       		android:text="@string/schedule"
       		android:focusable="true" />
   	</LinearLayout>
</ScrollView>